jsonschemadsl2ecore.trafo.opt/test/test09/invalidtests/example5.test9
{
	"job":{
		"role":"some role",
		"level":1,
		"age":33
	}
}